--- a/template.yml
+++ b/template.yml
@@ -40,6 +40,7 @@ Resources:
       Period: 60 # seconds
       Statistic: Sum
       Threshold: '1'
+      TreatMissingData: breaching
   InvocationsAlarm: # Alarm if we're not getting any invocations
     Type: AWS::CloudWatch::Alarm
     Properties:
@@ -55,3 +56,4 @@ Resources:
       Period: 60 # seconds
       Statistic: Sum
       Threshold: '1'
+      TreatMissingData: breaching
